# pyseed-examples

./: README.md  pyproject.toml
examples/: seed_better.py  seed_bps.py  upload_example_data.ipynb
examples/data/better/: better-mappings.csv  better-test-data.xlsx
examples/data/bps/: README.md  bps-mappings.csv  bps-targets-mappings.csv  cbl-mappings.csv  espm-webservice-mappings.csv
