[tool.poetry]
name = "pyseed-examples"
version = "0.1.0"
description = "Example data and Python files for loading data into SEED through py-seed API"
authors = ["Nicholas Long <nicholas.long@nrel.gov>"]
license = "BSD-4-Clause"

readme = "README.md"

homepage = "https://seed-platform.org"
repository = "https://github.com/seed-platform/tbd"
documentation = "https://seed-platform.org"
keywords = ["SEED Platform", "Building Benchmarking", "Salesforce"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
packages = [
    { include = "examples"}
]

[tool.poetry.dependencies]
python = ">=3.7.1, <3.10"
# py-seed = "^0.2.1"
# py-seed = { github = "seed-platform/py-seed", branch = "add-seed-helpers" }
py-seed = { path = "../py-seed", develop = true}
simple-salesforce = "^1.11.6"
usaddress = ">0"

[tool.poetry.dev-dependencies]
autopep8 = "1.5.4"
flake8 = "3.8.3"
mypy = "^0.950"
pre-commit = "2.19.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
tox = "3.25.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
