[tool.poetry]
name = "pyseed-examples"
version = "0.1.0"
description = "Example data and Python files for loading data into SEED through py-seed API"
authors = ["Nicholas Long <nicholas.long@nrel.gov>"]
license = "BSD-4-Clause"

readme = "README.md"

homepage = "https://seed-platform.org"
repository = "https://github.com/seed-platform/tbd"
documentation = "https://seed-platform.org"
keywords = ["SEED Platform", "Building Benchmarking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
packages = [
    { include = "examples"}
]

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
py-seed = "^0.3.0"
# py-seed = { github = "seed-platform/py-seed", branch = "develop" }
# py-seed = { path = "../py-seed", develop = true}
jupyterlab = "~4.0"
usaddress = ">0"

[tool.poetry.dev-dependencies]
autopep8 = "~2.0"
flake8 = "6.0.0"
mypy = "~1.3"
pre-commit = "3.3.2"
pytest = "^7.1.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
